<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightcyan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="corp.poopapps.calculadoracientfica.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4">

        <TextView
            android:id="@+id/TResultado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/silver"
            android:text="@string/TResultado"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Bborrar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:onClick="BotonBorrar"
            android:text="@string/borrar"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/whitesmoke"
            tools:ignore="OnClick" />

    </LinearLayout>


    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:weightSum="4">

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/B7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B7"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/B8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B8"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/B9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B9"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/Bplus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkcyan"
                android:onClick="onButtonClicked"
                android:text="@string/Bplus"
                android:textSize="40sp"
                android:textStyle="bold" />/>

        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/B4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B4"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/B5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B5"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/B6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B6"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/Bminus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkcyan"
                android:onClick="onButtonClicked"
                android:text="@string/Bminus"
                android:textSize="40sp"
                android:textStyle="bold" />/>
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/B1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B1"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/B2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B2"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/B3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B3"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/Btimes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkcyan"
                android:onClick="onButtonClicked"
                android:text="@string/Btimes"
                android:textSize="30sp"
                android:textStyle="bold" />/>
        </TableRow>

        <TableRow android:layout_weight="1">

            <Button
                android:id="@+id/Bpoint"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/Bpoint"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/B0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:onClick="onButtonClicked"
                android:text="@string/B0"
                android:textSize="40sp"
                android:textStyle="bold" />/>

            <Button
                android:id="@+id/Bequals"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:onClick="onButtonClicked"
                android:text="@string/Bequals"
                android:textSize="40sp"
                android:textStyle="bold"/>/>

            <Button
                android:id="@+id/Bdivided"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/darkcyan"
                android:onClick="onButtonClicked"
                android:text="@string/Bdivided"
                android:textSize="40sp"
                android:textStyle="bold" />
            />
        </TableRow>
    </TableLayout>

</LinearLayout>

